--- a/ide-migration/migration.html
+++ b/ide-migration/migration.html
@@ -36,6 +36,7 @@
     <ide-container>
       <view ng-show="currentView === 'history'" id="migration-history"></view>
       <view ng-show="currentView === 'zip'" id="zip-migration"></view>
+      <view ng-show="currentView === 'live'" id="live-migration"></view>
     </ide-container>
 
     <ide-dialogs></ide-dialogs>
