--- a/ide-migration/live-migration.html
+++ b/ide-migration/live-migration.html
@@ -265,7 +265,8 @@
                             You can now publish them from workspace "workspace".
                         </div>
                         <fd-wizard-next-step>
-                            <fd-button dg-label="Go to Workbench" dg-type="emphasized" ng-click="goToWorkbench()">
+                            <fd-button compact="true" dg-label="Go to Workbench" dg-type="emphasized"
+                                ng-click="goToWorkbench()">
                             </fd-button>
                         </fd-wizard-next-step>
                     </div>
