--- a/ide-migration/live-migration.html
+++ b/ide-migration/live-migration.html
@@ -222,6 +222,19 @@
                             </div>
                         </div>
 
+                        <div class="fd-row">
+                            <div class="fd-col fd-col-md--2">
+                            </div>
+                            <div class="fd-col fd-col--full">
+                                <fd-form-item>
+                                    <fd-checkbox id="cbid" compact="false" ng-model="allDUSelected">
+                                    </fd-checkbox>
+                                    <fd-checkbox-label for="cbid">All delivery units
+                                    </fd-checkbox-label>
+                                </fd-form-item>
+                            </div>
+                        </div>
+
                     </fieldset>
                 </fd-wizard-step>
                 <fd-wizard-step dg-label="Changes" indicator-label="4" indicator-glyph="{{ getIndicatorGlyph(4) }}"
