--- a/ide-migration/live-migration.html
+++ b/ide-migration/live-migration.html
@@ -240,7 +240,7 @@
                 <fd-wizard-step dg-label="Changes" indicator-label="4" indicator-glyph="{{ getIndicatorGlyph(4) }}"
                     step-click="gotoStep(step)">
                     <fd-toolbar has-title="true" no-bottom-border="true" dg-type="transparent">
-                        <h3>{{ changedFiles.changedFiles }} file(s) will be changed</h3>
+                        <h3>{{ changes.changedFiles }} file(s) will be changed</h3>
                         <fd-toolbar-spacer></fd-toolbar-spacer>
                         <fd-segmented-button aria-label="Difference view type">
                             <fd-button dg-label="Split" compact="true"
