--- a/ide-migration/migration.html
+++ b/ide-migration/migration.html
@@ -14,23 +14,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" dg-brand-icon />
-
     <title dg-brand-title></title>
-
     <script type="text/javascript" src="services/migration-perspective.js"></script>
-
     <theme></theme>
     <script type="text/javascript" src="/services/v4/js/ide-core/services/loader.js?id=ide-perspective-js"></script>
-
     <link type="text/css" rel="stylesheet" href="/services/v4/js/ide-core/services/loader.js?id=ide-perspective-css" />
-
     <script type="text/javascript" src="js/migration.js"></script>
   </head>
 
   <body>
-    <ide-header menu-data-url="/services/v4/js/ide-migration/services/menu/menu.js"></ide-header>
+    <ide-header menu-ext-id="ide-migration-menu"></ide-header>
     <ide-contextmenu></ide-contextmenu>
 
     <ide-container>
